--- a/assets/conf/nginx.conf
+++ b/assets/conf/nginx.conf
@@ -8,6 +8,18 @@ http {
   include /etc/nginx/mime.types;
 
   server {
+    server_name www.fyi.org.nz;
+
+    return 301 $scheme://fyi.org.nz$request_uri;
+  }
+
+  server {
+    server_name fyi.org.nz;
+
+    if ($http_x_forwarded_proto = 'http') {
+      return 301 https://fyi.org.nz$request_uri;
+    }
+
     root /var/www/html/fyi;
     index index.html;
   }
