Remove ssl for staging

--- a/assets/conf/nginx-alaveteli-staging.conf
+++ b/assets/conf/nginx-alaveteli-staging.conf
@@ -55,7 +55,7 @@ http {
 
   server {
     # Rack middleware forces a SSL redirect
-    listen 80 443;
+    listen 80;
     server_name staging.fyi.org.nz;
 
     location / {
