--- a/assets/conf/nginx-alaveteli-staging.conf
+++ b/assets/conf/nginx-alaveteli-staging.conf
@@ -58,6 +58,8 @@ http {
     listen 80;
     server_name staging.fyi.org.nz;
 
+    root /data/alaveteli/public;
+
     location / {
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header Host $http_host;
